--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,8 +29,8 @@ ci_lint_only:
     - nvm use v16.14.0
     - make clean
     - make lint_nofix
-  except:
-    - tags
+  #except:
+  # - tags
   tags:
     - cloudcare-ft
 
