chore: diable CI on tag push

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,8 @@ ci_lint_only:
     - nvm use v16.14.0
     - make clean
     - make lint_nofix
+  except: # disable CI on tag push
+   - tags
   tags:
     - cloudcare-ft
 
@@ -184,6 +186,8 @@ release-stable:
     ]
   only:
     - master
+  except: # disable CI on tag push
+    - tags
   script:
     - make clean
     - make production GIT_BRANCH=$CI_COMMIT_BRANCH VERSION="$CI_VERSION" PKGEBPF=true # update the version on each release
