feat: refact `make ut`
Close #1777.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ ci_lint_and_ut:
     - nvm use v16.14.0
     - make clean
     - make lint AUTO_FIX=off
-    - export UT_EXCLUDE_INTEGRATION_TESTING="on" # ignore integration test
+    - export UT_EXCLUDE_INTEGRATION_TESTING="" # enable integration test
     - make ut DATAWAY_URL="$TESTING_METRIC_DATAWAY"
   tags:
     - cloudcare-ft
@@ -53,23 +53,6 @@ ci_ut_only:
   tags:
     - cloudcare-ft
 
-ci_it_only:
-  stage: deploy
-  resource_group: production
-  only:
-    - /^it-.*$/
-  script:
-    # - systemctl daemon-reload
-    # - systemctl restart docker
-    # - make
-    # - cd /root/go/src/gitlab.jiagouyun.com/cloudcare-tools/datakit/plugins/inputs/jenkins
-    # - go test -v .
-    - make clean
-    - make it DATAWAY_URL="$TESTING_METRIC_DATAWAY"
-    - make # try build basic binaries
-  tags:
-    - cloudcare-ft
-
 test-datakit-production:
   stage: test
   resource_group: production
@@ -81,7 +64,7 @@ test-datakit-production:
     - make clean
     - make production_notify GIT_BRANCH=$CI_COMMIT_BRANCH VERSION="$CI_VERSION"
     - make lint AUTO_FIX=off
-    - export UT_EXCLUDE_INTEGRATION_TESTING="on"
+    - export UT_EXCLUDE_INTEGRATION_TESTING="" # enable integration test
     - make ut DATAWAY_URL="$TESTING_METRIC_DATAWAY" DOCKER_REMOTE_HOST=$TESTING_DOCKER_HOST UT_EXCLUDE=$UT_EXCLUDE GIT_BRANCH=$CI_COMMIT_BRANCH
   tags:
     - cloudcare-ft
