--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ ci_lint_and_ut:
     - make clean
     - make lint AUTO_FIX=off
     - export UT_EXCLUDE_INTEGRATION_TESTING="off" # enable integration testing.
-    - export UT_EXCLUDE_HUGE_INTEGRATION_TESTING="on" # exclude huge integration testing.
+    - export UT_EXCLUDE_HUGE_INTEGRATION_TESTING="on" # exclude slow testing.
     - make ut DATAWAY_URL="$TESTING_METRIC_DATAWAY"
   tags:
     - cloudcare-ft
