--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ before_script:
 
 variables:
   PROJECT: "datakit"
-  CI_VERSION: "1.12.0"
+  CI_VERSION: "1.12.1"
   TEST_VERSION: "1.999.0"
 
 stages:
@@ -62,12 +62,12 @@ test-datakit-production:
     - master
   script:
     - nvm use v16.14.0
-    - make clean
-    - make production_notify GIT_BRANCH=$CI_COMMIT_BRANCH VERSION="$CI_VERSION"
-    - make lint AUTO_FIX=off
-    - export UT_EXCLUDE_INTEGRATION_TESTING="off" # enable integration test
-    - export UT_EXCLUDE_HUGE_INTEGRATION_TESTING="off" # enable huge integration testing.
-    - make ut DATAWAY_URL="$TESTING_METRIC_DATAWAY" DOCKER_REMOTE_HOST=$TESTING_DOCKER_HOST UT_EXCLUDE=$UT_EXCLUDE GIT_BRANCH=$CI_COMMIT_BRANCH
+    #- make clean
+    #- make production_notify GIT_BRANCH=$CI_COMMIT_BRANCH VERSION="$CI_VERSION"
+    #- make lint AUTO_FIX=off
+    #- export UT_EXCLUDE_INTEGRATION_TESTING="off" # enable integration test
+    #- export UT_EXCLUDE_HUGE_INTEGRATION_TESTING="on" # enable huge integration testing.
+    #- make ut DATAWAY_URL="$TESTING_METRIC_DATAWAY" DOCKER_REMOTE_HOST=$TESTING_DOCKER_HOST UT_EXCLUDE=$UT_EXCLUDE GIT_BRANCH=$CI_COMMIT_BRANCH
   tags:
     - cloudcare-ft
 
