feat: add datakit lite

--- a/install.ps1.template
+++ b/install.ps1.template
@@ -238,6 +238,13 @@ if ($x -ne $null) {
 	Write-COutput yellow "* set install log"
 }
 
+$lite=
+$x = [Environment]::GetEnvironmentVariable("DK_LITE")
+if ($x -ne $null) {
+	$lite = $x
+	Write-COutput yellow "* set lite"
+}
+
 $confd_backend=""
 $confd_basic_auth=""
 $confd_client_ca_keys=""
@@ -471,6 +478,7 @@ if ($upgrade -ne $null) { # upgrade
 			"--upgrade-ip-whitelist='${upgrade_ip_whitelist}'",
 			"--install-log='${install_log}'",
 			"--proxy='${proxy}'",
+			"--lite='${lite}'",
 			"--installer_base_url='${installer_base_url}'"
 			)
 } else { # install new datakit
@@ -483,6 +491,7 @@ if ($upgrade -ne $null) { # upgrade
 			"--installer_base_url='${installer_base_url}'",
 			"--port=${http_port}",
 			"--proxy='${proxy}'",
+			"--lite='${lite}'",
 			"--namespace='${namespace}'",
 			"--env_hostname='${env_hostname}'",
 			"--cloud-provider='${cloud_provider}'",
