Feat: add async-profiler and py-spy into datakit-operator (#1531)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -198,3 +198,15 @@ current-testing:
   tags:
     - cloudcare-ft
 
+
+build-profiling-image:
+  stage: deploy
+  resource_group: production
+  only:
+    - /^k8s_profilers[-_].*$/
+  script:
+    - pwd
+    - cd k8s-profilers && make build
+    - pwd
+  tags:
+    - cloudcare-ft
