添加 privatelink 新加坡站点

--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -42,6 +42,10 @@ image:
   ## The Kubernetes [imagePullPolicy][] value
   #
   pullPolicy: Always
+  # -- Optional array of imagePullSecrets containing private registry credentials
+  ## Ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
+  imagePullSecrets: []
+  # - name: secretName
 
 # https://docs.guance.com/datakit/datakit-daemonset-deploy/
 
