--- a/datakit.yaml.template
+++ b/datakit.yaml.template
@@ -13,7 +13,7 @@ rules:
   resources: ["clusterroles"]
   verbs: ["get", "list", "watch"]
 - apiGroups: [""]
-  resources: ["nodes", "nodes/proxy", "namespaces", "pods", "pods/log", "events", "services", "endpoints"]
+  resources: ["nodes", "namespaces", "pods", "pods/log", "events", "services", "endpoints"]
   verbs: ["get", "list", "watch"]
 - apiGroups: ["apps"]
   resources: ["deployments", "daemonsets", "statefulsets", "replicasets"]
@@ -333,3 +333,4 @@ data:
 #               return self.report(in_data)
 
 ---
+
