--- a/charts/datakit/templates/service.yaml
+++ b/charts/datakit/templates/service.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "datakit.fullname" . }}
+  name: {{ include "datakit-service.fullname" . }}
 spec:
   type: {{ .Values.service.type }}
   selector:
