--- a/charts/datakit/templates/service.yaml
+++ b/charts/datakit/templates/service.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "datakit-service.fullname" . }}
+  name: {{ include "datakit.fullname" . }}
 spec:
   type: {{ .Values.service.type }}
   selector:
@@ -14,3 +14,19 @@ spec:
       protocol: TCP
       name: http
 
+---
+# The service name should correspond to the Service in the YAML, both named "datakit-service".
+# To maintain compatibility, create another service.
+apiVersion: v1
+kind: Service
+metadata:
+  name: datakit-service
+spec:
+  type: {{ .Values.service.type }}
+  selector:
+    app: {{ include "datakit.fullname" . }}
+  ports:
+    - port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.port }}
+      protocol: TCP
+      name: http
