doc: replace jiagouyun.com to guance.com

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,7 +86,7 @@ release-ebpf-amd64-testing:
   stage: deploy_ebpf
   resource_group: production
   needs: [test-datakit-testing]
-  image: pubrepo.jiagouyun.com/ebpf-dev/datakit-developer:1.7
+  image: pubrepo.guance.com/ebpf-dev/datakit-developer:1.7
   only:
     - testing
     - /^testing-.*$/
@@ -100,7 +100,7 @@ release-ebpf-aarch64-testing:
   stage: deploy_ebpf
   resource_group: production
   needs: [test-datakit-testing]
-  image: pubrepo.jiagouyun.com/ebpf-dev/datakit-developer:1.7
+  image: pubrepo.guance.com/ebpf-dev/datakit-developer:1.7
   only:
     - testing
     - /^testing-.*$/
@@ -114,7 +114,7 @@ release-ebpf-amd64-production:
   stage: deploy_ebpf
   resource_group: production
   needs: [test-datakit-production]
-  image: pubrepo.jiagouyun.com/ebpf-dev/datakit-developer:1.7
+  image: pubrepo.guance.com/ebpf-dev/datakit-developer:1.7
   only:
     - master
     - unstable
@@ -128,7 +128,7 @@ release-ebpf-aarch64-production:
   stage: deploy_ebpf
   resource_group: production
   needs: [test-datakit-production]
-  image: pubrepo.jiagouyun.com/ebpf-dev/datakit-developer:1.7
+  image: pubrepo.guance.com/ebpf-dev/datakit-developer:1.7
   only:
     - master
     - unstable
