--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,7 +64,7 @@ test-datakit-production:
     - make lint AUTO_FIX=off
     - export UT_EXCLUDE_INTEGRATION_TESTING="off" # enable integration test
     - export UT_EXCLUDE_HUGE_INTEGRATION_TESTING="off" # enable huge integration testing.
-    - make ut DATAWAY_URL="$TESTING_METRIC_DATAWAY" DOCKER_REMOTE_HOST=$TESTING_DOCKER_HOST UT_EXCLUDE=$UT_EXCLUDE GIT_BRANCH=$CI_COMMIT_BRANCH
+    - make ut DATAWAY_URL="$TESTING_METRIC_DATAWAY"
   tags:
     - cloudcare-ft
 
