--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ before_script:
 
 variables:
   PROJECT: "datakit"
-  CI_VERSION: "1.20.0"
+  CI_VERSION: "1.20.1"
   TEST_VERSION: "1.999.0"
 
 stages:
@@ -35,7 +35,7 @@ ci_lint_and_ut:
     - nvm use v16.14.0
     - make clean
     - make code_lint AUTO_FIX=off
-    - export UT_EXCLUDE_INTEGRATION_TESTING="on" # enable integration testing.
+    - export UT_EXCLUDE_INTEGRATION_TESTING="on" # disable integration testing.
     - export UT_EXCLUDE_HUGE_INTEGRATION_TESTING="on" # enable huge integration testing.
     - make ut DATAWAY_URL="$TESTING_METRIC_DATAWAY"
   tags:
@@ -82,8 +82,11 @@ test-datakit-testing:
   script:
     - nvm use v16.14.0
     - make clean
+    - export UT_EXCLUDE_INTEGRATION_TESTING="off" # enable integration test
+    - export UT_EXCLUDE_HUGE_INTEGRATION_TESTING="off" # enable huge integration testing.
     - make testing_notify GIT_BRANCH=$CI_COMMIT_BRANCH
     - make lint AUTO_FIX=off
+    - make ut DATAWAY_URL="$TESTING_METRIC_DATAWAY"
   tags:
     - cloudcare-ft
 
