添加 ecs fargate 采集模式，修改细节

--- a/charts/datakit/templates/rbac.yaml
+++ b/charts/datakit/templates/rbac.yaml
@@ -8,7 +8,7 @@ rules:
     resources: ["clusterroles"]
     verbs: ["get", "list", "watch"]
   - apiGroups: [""]
-    resources: ["nodes", "nodes/proxy", "namespaces", "pods", "pods/log", "events", "services", "endpoints"]
+    resources: ["nodes", "nodes/stats", "namespaces", "pods", "pods/log", "events", "services", "endpoints"]
     verbs: ["get", "list", "watch"]
   - apiGroups: ["apps"]
     resources: ["deployments", "daemonsets", "statefulsets", "replicasets"]
