--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ ci_lint_and_ut:
     - make clean
     - make lint AUTO_FIX=off
     - export UT_EXCLUDE_INTEGRATION_TESTING="on" # disable integration testing.
-    - export UT_EXCLUDE_HUGE_INTEGRATION_TESTING="on" # enable huge integration testing.
+    - export UT_EXCLUDE_HUGE_INTEGRATION_TESTING="off" # enable huge integration testing.
     - make ut DATAWAY_URL="$TESTING_METRIC_DATAWAY"
   tags:
     - cloudcare-ft
