--- a/datakit.template.yaml
+++ b/datakit.template.yaml
@@ -135,7 +135,7 @@ spec:
       dnsPolicy: ClusterFirstWithHostNet
       containers:
       - env:
-        - name: HOST_IP
+        - name: ENV_K8S_NODE_IP
           valueFrom:
             fieldRef:
               apiVersion: v1
